<resources>
    <string name="app_name">Sphinx SRS</string>
    <string name="start_service">Start the service</string>
    <string name="stop_service">Stop the service</string>
    <string name="label_serviceState">Service status:</string>
    <string name="service_on">on</string>
    <string name="service_off">off</string>
    <string name="notify_title">Recognition service</string>
    <string name="settings">Settings</string>
    <string name="service_start_init">Starting the initialization recognition</string>
    <string name="service_stop">Service stopped</string>
    <string name="service_error_init">Recognition initialization error</string>
    <string name="service_init_complete">Initialization complete</string>
    <string name="service_start_recognize_keyphrase">Keyword recognition started</string>
    <string name="service_start_recognize_command">Command recognition started</string>
    <string name="service_keyphrase_recognized">Key phrase recognized</string>
    <string name="service_command_recognized">Command recognized</string>
    <string name="service_recognize_command_timeout">Command recognition timeout</string>
    <string name="main_settings">Basic settings (requires restart service)</string>
    <string name="notification_settings">Settings for recognizing the key phrase and command (works only when the service control window is open)</string>
    <string name="path_to_am">Path to the acoustic model</string>
    <string name="keyphrase_for_recognition">Key phrase for recognition</string>
    <string name="timeout_recognition">Command recognition timeout</string>
    <string name="sample_rate">Sampling frequency</string>
    <string name="remove_noise">Remove noise</string>
    <string name="vibration">Vibration</string>
    <string name="sound_notify">Sound alert</string>
    <string name="last_command_or_error">Last command or error:</string>
    <string name="last_event_log">Log of recent events:</string>
    <string name="log_raw">Raw data log</string>
    <string name="log_raw_summary">May take up a lot of memory space.</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="service_ready_for_recognition">Service is ready for recognition</string>
    <string name="error_occurred_while_initializing_recognition">An error occurred while initializing recognition.: %s</string>
    <string name="unable_create_directory_for_logs">Could not create directory for recognizer logs. Logging is not enabled.</string>
    <string name="language">Language</string>
    <string name="select_language">Select your preferred language</string>
    <string name="can_not_access_directory">Unable to access directory on path (or does not exist): </string>
    <string name="perhaps_incorrectly_directory">" perhaps incorrectly specified directory with acoustic model or missing some files"</string>
    <string name="channel_name">Sphinx SRS background service</string>
    <string name="empty_string" />
    <string name="default_keyphrase">okay robot</string>
    <string name="default_am_path">/storage/sdcard0/Sphinx/</string>
    <string name="permissions_denied">Permissions denied. You need to grant all permissions for the application to work properly</string>
    <string name="service_does_not_have_permissions">Recognition service does not have the necessary permissions to work properly. Please start the service from the \'Sphinx SRS\' application and grant all necessary permissions</string>
</resources>
